2012-12-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c,
	  src/stm8/gen.h,
	  src/stm8/ralloc.h:
	  Basic infrastructure for STM8 port.

2012-12-21 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.common.in,
	  Makefile.in,
	  configure.in,
	  sim/ucsim/aclocal.m4,
	  sim/ucsim/configure,
	  configure,
	  debugger/mcs51/aclocal.m4,
	  src/port.h,
	  src/stm8,
	  src/stm8/Makefile.in,
	  src/stm8/main.c,
	  src/stm8/peeph.def,
	  device/lib/stm8,
	  device/lib/stm8/Makefile.in,
	  src/stm8/ralloc.h:
	  Basic build infrastructure for STM8 port.

2012-12-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/frexpf.c:
	  Test for frexpf().
	* src/z80/gen.c:
	  Do not attempt to restore pair using dec, when it has been pushed.

2012-12-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (constVal),
	* sdas/asxxsrc/aslex.c (nxtline): fixed warnings

2012-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Send error message about invalid root to crr instead of cout.

2012-12-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCglobl.h, support/cpp/sdcpp.opt,
	  support/cpp/libcpp/init.c, support/cpp/sdcpp-opts.c
	  fixed bug 3572584 - "Trigraphs don't work", 2nd try:
	  trigraphs are enabled by default in sdcpp

2012-12-16 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglobl.h, src/SDCCmain.c:
	  fixed bug 3572584 - "Trigraphs don't work"

2012-12-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not generate redundant loads when fetching pair from regs.

2012-12-02 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl: I changed the copyright.

2012-12-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (labeled_statement): fixed bug #3590884
