@@ -352,6 +352,9 @@ static PORT *_ports[] = {
 #if !OPT_DISABLE_S08
   &s08_port,
 #endif
+#if !OPT_DISABLE_STM8
+  &stm8_port,
+#endif
 };
 
 #define NUM_PORTS (sizeof(_ports)/sizeof(_ports[0]))
