@@ -1,0 +1,10 @@
+#include "ralloc.h"
+
+/*-----------------------------------------------------------------*/
+/* assignRegisters - assigns registers to each live range as need  */
+/*-----------------------------------------------------------------*/
+void
+stm8_assignRegisters (ebbIndex * ebbi)
+{
+}
+
